--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@ body {
     background: linear-gradient(90deg, rgba(148,187,233,1) 0%, rgba(238,174,174,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#94bbe9",endColorstr="#eeaeae",GradientType=1);
 }
+
+.jumbotron {
+    background: white !important;
+}
