--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@ body {
 .jumbotron {
     background: white !important;
 }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
+    font-weight: 100;
+}
