remove scrollbar from cat generator

--- a/exercises/random-cats/style.css
+++ b/exercises/random-cats/style.css
@@ -34,3 +34,7 @@ html {
     -o-background-size: cover;
     background-size: cover;
 }
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
